--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           >Inicio</a
         >
         <a
-          href="ready.html"
+          href="languages.html"
           class="comfortaa text-black transition duration-200 hover:text-green-400 hover:scale-110"
           >Aprender</a
         >
