--- a/public/languages.html
+++ b/public/languages.html
@@ -33,7 +33,7 @@
           >Inicio</a
         >
         <a
-          href="ready.html"
+          href="languages.html"
           class="comfortaa text-green-400 font-bold transition duration-200 hover:text-blue-400 hover:scale-110"
           >Aprender</a
         >
@@ -144,7 +144,9 @@
           "cursor-pointer"
         );
         card.onclick = () => {
-          window.location.href = `lessons.html?lang=${idioma.nombre}&code=${idioma.codigo}`;
+          localStorage.setItem('lang',idioma.nombre)
+          localStorage.setItem('code',idioma.codigo)
+          window.location.href = `lessons.html`;
         };
 
         const flagImg = document.createElement("img");
