--- a/public/languages.html
+++ b/public/languages.html
@@ -38,7 +38,7 @@
           >Aprender</a
         >
         <a
-          href="#"
+          href="profile.html"
           class="comfortaa text-black transition duration-200 hover:text-green-400 hover:scale-110"
           >Mi Aprendizaje</a
         >
@@ -78,6 +78,45 @@
     </main>
 
     <script>
+      // Verificar token antes de mostrar la página
+      async function verifyTokenOrRedirect() {
+        const token = localStorage.getItem("token");
+        if (!token) {
+          window.location.href = "login.html";
+          return;
+        }
+        try {
+          const res = await fetch("/api/verify-token", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ token }),
+          });
+          const result = await res.json();
+          if (!result.valid) {
+            localStorage.removeItem("token");
+            window.location.href = "login.html";
+          }
+        } catch (err) {
+          window.location.href = "login.html";
+        }
+      }
+      verifyTokenOrRedirect();
+
+      document.addEventListener("DOMContentLoaded", function () {
+        const salirBtn = document.querySelector('a[href="#"]:nth-child(4)');
+        if (!localStorage.getItem("token")) {
+          salirBtn.style.display = "none";
+        } else {
+          salirBtn.style.display = "inline-block";
+          salirBtn.onclick = function (e) {
+            e.preventDefault();
+            localStorage.removeItem("token");
+            localStorage.removeItem("datosToken");
+            localStorage.removeItem("usuario");
+            window.location.href = "login.html";
+          };
+        }
+      });
       const idiomas = [
         {
           _id: "63123772bd37rb8",
@@ -144,8 +183,8 @@
           "cursor-pointer"
         );
         card.onclick = () => {
-          localStorage.setItem('lang',idioma.nombre)
-          localStorage.setItem('code',idioma.codigo)
+          localStorage.setItem("lang", idioma.nombre);
+          localStorage.setItem("code", idioma.codigo);
           window.location.href = `lessons.html`;
         };
 
