Added a Fav Icon to every page

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="icon" type="image/x-icon" href="img/GLOTIcon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G/LOT - Inicio</title>
@@ -207,7 +208,6 @@
           };
         }
       });
-
     </script>
   </body>
 </html>
