--- a/public/fill.html
+++ b/public/fill.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="img/GLOTIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G/LOT - Rellenar</title>
     <link
@@ -197,7 +198,7 @@
           const res = await fetch("/api/verify-token", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ token })
+            body: JSON.stringify({ token }),
           });
           const result = await res.json();
           if (!result.valid) {
@@ -209,7 +210,6 @@
         }
       }
       verifyTokenOrRedirect();
-     
 
       function goBack() {
         localStorage.removeItem("lesson_id");
