--- a/public/match.html
+++ b/public/match.html
@@ -342,6 +342,10 @@
       }
 
       document.addEventListener("DOMContentLoaded", () => {
+
+        const lessonid = localStorage.getItem("lesson_id");
+        
+
         const sampleLesson = {
           _id: "767bh2bye72e",
           idioma: "Portugués",
