--- a/public/memory.html
+++ b/public/memory.html
@@ -231,7 +231,9 @@
         window.location.href = "lessons.html";
       }
       document.addEventListener("DOMContentLoaded", () => {
-        // Data de la lección simulada, como si se obtuviera de localStorage
+        
+        // CODE FOR GATHERING A LESSON BASED ON lesson_id FROM LOCALSTORAGE
+
         const sampleLesson = {
           _id: "767bh2bye72e",
           idioma: "Portugués",
