--- a/public/profile.html
+++ b/public/profile.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="img/GLOTIcon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>G/LOT - Perfil</title>
   </head>
   <body>
     <!-- Existing content of the HTML file -->
@@ -45,6 +45,8 @@
             localStorage.removeItem("token");
             localStorage.removeItem("datosToken");
             localStorage.removeItem("usuario");
+            localStorage.removeItem("lang");
+            localStorage.removeItem("code");
             window.location.href = "login.html";
           };
         }
