--- a/public/login.html
+++ b/public/login.html
@@ -137,21 +137,12 @@
         }
       }
 
-      document.addEventListener("DOMContentLoaded", function () {
-        const salirBtn = document.querySelector('a[href="#"]:nth-child(4)');
-        if (!localStorage.getItem("token")) {
-          salirBtn.style.display = "none";
-        } else {
-          salirBtn.style.display = "inline-block";
-          salirBtn.onclick = function (e) {
-            e.preventDefault();
-            localStorage.removeItem("token");
-            localStorage.removeItem("datosToken");
-            localStorage.removeItem("usuario");
-            window.location.href = "login.html";
-          };
-        }
-      });
+  document.addEventListener("keydown", function (event) {
+    if (event.key === "Enter") {
+      login();
+    }
+  });
+
     </script>
   </body>
 </html>
